--- a/azure-pipelines-powershell.yml
+++ b/azure-pipelines-powershell.yml
@@ -25,6 +25,7 @@ steps:
     filePath: 'powershell.ps1'  
 
 - task: PowerShell@2
+  displayName: 'Approved Powershell'
   inputs:
     targetType: 'inline'
     script: |
