Update azure-pipelines-powershell.yml for Azure Pipelines

--- a/azure-pipelines-powershell.yml
+++ b/azure-pipelines-powershell.yml
@@ -18,6 +18,7 @@ jobs:
       instructions: 'Continue?'
 
 - job: Job2
+  dependsOn: Job1
   steps:
   - task: PowerShell@2
     displayName: 'Inline Powershell'
