Update azure-pipelines-powershell.yml for Azure Pipelines

--- a/azure-pipelines-powershell.yml
+++ b/azure-pipelines-powershell.yml
@@ -11,10 +11,11 @@ pool:
 
 jobs:
 - job: Job1
+  pool: server
   steps:
   - task: ManualValidation@0
     inputs:
-      notifyUsers: 'all'
+      notifyUsers: 'email@example.com'
       instructions: 'Continue?'
 
 - job: Job2
